# sqlx-pgpool-bug-2

./: Cargo.toml
src/: main.rs
