[package]
name = "sqlx-pgpool-bug"
version = "0.1.0"
authors = ["Ivan Kozik <ivan@ludios.org>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2" }
sqlx = { git = "https://github.com/launchbadge/sqlx", default-features = false, features = ["runtime-tokio", "postgres"] }
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3"
