[package]
name = "sqlx-pgpool-bug-2"
version = "0.1.0"
authors = ["Ivan Kozik <ivan@ludios.org>"]
edition = "2018"

[dependencies]
once_cell = "1"
sqlx = { git = "https://github.com/launchbadge/sqlx", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "json" ] }
# Vendored openssl for sqlx
openssl = { version = "0.10", features = [ "vendored" ] }
tokio = "0.2"
futures = "0.3"
